<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/opc_inicio"
        android:title="@string/menu_inicio"
        android:icon="@drawable/ic_outline_home_24"
        />

    <item android:id="@+id/opc_agg_productos"
        android:title="@string/menu_agg_productos"
        android:icon="@drawable/ic_outline_add_box_24"
        />

    <item android:id="@+id/opc_productos"
        android:title="@string/menu_productos"
        android:icon="@drawable/ic_outline_add_box_24"
        />

    <item android:id="@+id/opc_ventas"
        android:title="@string/menu_ventas"
        android:icon="@drawable/ic_outline_add_box_24"
        />

    <item android:id="@+id/opc_reservas"
        android:title="@string/menu_reservas"
        android:icon="@drawable/ic_outline_add_box_24"
        />

    <item android:id="@+id/opc_categorias"
        android:title="@string/menu_categorias"
        android:icon="@drawable/ic_outline_add_box_24"
        />

    <item android:id="@+id/opc_agg_clientes"
        android:title="@string/menu_agg_clientes"
        android:icon="@drawable/ic_outline_add_box_24"
        />

    <item android:id="@+id/opc_clientes"
        android:title="@string/menu_clientes"
        android:icon="@drawable/ic_outline_people_alt_24"
        />

    <item android:id="@+id/opc_cerrar_sesion"
        android:title="@string/menu_cerrar_sesion"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        />
</menu>